# review_django

./: Dockerfile  docker-compose.yml  manage.py  pyproject.toml
review_django/: asgi.py  settings.py  urls.py  wsgi.py
review_djanog/: asgi.py  settings.py  urls.py  wsgi.py
todo_api/: models.py  serializers.py  urls.py  views.py
todo_api/migrations/: 0001_initial.py
