[tool.poetry]
name = "review-django"
version = "0.1.0"
description = ""
authors = ["Luke <saop0071288617@gmail.com>"]
readme = "README.md"
packages = [{include = "review_django"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
psycopg = "^3.1.8"
django-rest-framework = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
